CREATE TABLE IF NOT EXISTS "__EFMigrationsHistory" (
    "MigrationId" character varying(150) NOT NULL,
    "ProductVersion" character varying(32) NOT NULL,
    CONSTRAINT "PK___EFMigrationsHistory" PRIMARY KEY ("MigrationId")
);

START TRANSACTION;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "FunctionalRequirements" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "Code" character varying(10) NOT NULL,
        "Description" text NOT NULL,
        "Module" text NOT NULL,
        "Status" integer NOT NULL,
        "Observation" text NOT NULL,
        CONSTRAINT "PK_FunctionalRequirements" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "Materials" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "Code" character varying(40) NOT NULL,
        "Name" character varying(120) NOT NULL,
        "Unit" integer NOT NULL,
        "Stock" numeric(18,2) NOT NULL,
        "MinStock" numeric(18,2) NOT NULL,
        "Status" integer NOT NULL,
        "LastEntryDate" date NOT NULL,
        CONSTRAINT "PK_Materials" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "NonFunctionalRequirements" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "Code" character varying(10) NOT NULL,
        "Description" text NOT NULL,
        "Status" integer NOT NULL,
        "Observation" text NOT NULL,
        CONSTRAINT "PK_NonFunctionalRequirements" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "ProductionOrders" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "OrderNumber" character varying(20) NOT NULL,
        "ProductName" character varying(80) NOT NULL,
        "TotalQuantity" integer NOT NULL,
        "ProducedQuantity" integer NOT NULL,
        "Status" integer NOT NULL,
        "Deadline" date NOT NULL,
        CONSTRAINT "PK_ProductionOrders" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "BomItems" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "ProductName" character varying(80) NOT NULL,
        "MaterialId" integer NOT NULL,
        "QuantityPerUnit" numeric(18,2) NOT NULL,
        "Unit" integer NOT NULL,
        CONSTRAINT "PK_BomItems" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_BomItems_Materials_MaterialId" FOREIGN KEY ("MaterialId") REFERENCES "Materials" ("Id") ON DELETE CASCADE
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "MaterialRequests" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "MaterialId" integer NOT NULL,
        "Quantity" numeric(18,2) NOT NULL,
        "ProductionOrderId" integer NOT NULL,
        "Status" integer NOT NULL,
        "CreatedAt" timestamp with time zone NOT NULL,
        CONSTRAINT "PK_MaterialRequests" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_MaterialRequests_Materials_MaterialId" FOREIGN KEY ("MaterialId") REFERENCES "Materials" ("Id") ON DELETE CASCADE,
        CONSTRAINT "FK_MaterialRequests_ProductionOrders_ProductionOrderId" FOREIGN KEY ("ProductionOrderId") REFERENCES "ProductionOrders" ("Id") ON DELETE CASCADE
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "QualityRecords" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "ProductionOrderId" integer NOT NULL,
        "UnitsInspected" integer NOT NULL,
        "Result" integer NOT NULL,
        "MotivoReproceso" character varying(300),
        "Responsable" character varying(120),
        "InspectionDate" date NOT NULL,
        CONSTRAINT "PK_QualityRecords" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_QualityRecords_ProductionOrders_ProductionOrderId" FOREIGN KEY ("ProductionOrderId") REFERENCES "ProductionOrders" ("Id") ON DELETE CASCADE
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "AlertDeliveries" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "UserId" integer NOT NULL,
        "AlertType" integer NOT NULL,
        "Subject" character varying(200) NOT NULL,
        "Body" character varying(4000) NOT NULL,
        "SentAt" timestamp with time zone NOT NULL,
        "Channel" character varying(40) NOT NULL,
        CONSTRAINT "PK_AlertDeliveries" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "AlertPreferences" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "UserId" integer NOT NULL,
        "AlertType" integer NOT NULL,
        "Enabled" boolean NOT NULL,
        CONSTRAINT "PK_AlertPreferences" PRIMARY KEY ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "Fichas" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "FichaCode" character varying(30) NOT NULL,
        "ProcessName" text NOT NULL,
        "InstructorName" text NOT NULL,
        "Turno" character varying(20) NOT NULL,
        "InstructorUserId" integer,
        "ProductionOrderId" integer,
        CONSTRAINT "PK_Fichas" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_Fichas_ProductionOrders_ProductionOrderId" FOREIGN KEY ("ProductionOrderId") REFERENCES "ProductionOrders" ("Id")
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "Users" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "Nombre" character varying(120) NOT NULL,
        "Email" character varying(160) NOT NULL,
        "PasswordHash" character varying(256) NOT NULL,
        "Rol" character varying(40) NOT NULL,
        "FichaAsignadaId" integer,
        "PermisosExtendidos" character varying(500) NOT NULL,
        "PhotoPath" character varying(260),
        "FuncionDescripcion" character varying(800),
        "IsActive" boolean NOT NULL,
        CONSTRAINT "PK_Users" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_Users_Fichas_FichaAsignadaId" FOREIGN KEY ("FichaAsignadaId") REFERENCES "Fichas" ("Id") ON DELETE SET NULL
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "PasswordResetTokens" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "UserId" integer NOT NULL,
        "TokenHash" character varying(128) NOT NULL,
        "ExpiresAtUtc" timestamp with time zone NOT NULL,
        "UsedAtUtc" timestamp with time zone,
        "CreatedAtUtc" timestamp with time zone NOT NULL,
        CONSTRAINT "PK_PasswordResetTokens" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_PasswordResetTokens_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE TABLE "ProductionSessions" (
        "Id" integer GENERATED BY DEFAULT AS IDENTITY,
        "FichaId" integer NOT NULL,
        "ProductionOrderId" integer NOT NULL,
        "Units" integer NOT NULL,
        "Observations" character varying(500) NOT NULL,
        "SessionDate" timestamp with time zone NOT NULL,
        "RegisteredByUserId" integer,
        CONSTRAINT "PK_ProductionSessions" PRIMARY KEY ("Id"),
        CONSTRAINT "FK_ProductionSessions_Fichas_FichaId" FOREIGN KEY ("FichaId") REFERENCES "Fichas" ("Id") ON DELETE CASCADE,
        CONSTRAINT "FK_ProductionSessions_ProductionOrders_ProductionOrderId" FOREIGN KEY ("ProductionOrderId") REFERENCES "ProductionOrders" ("Id") ON DELETE CASCADE,
        CONSTRAINT "FK_ProductionSessions_Users_RegisteredByUserId" FOREIGN KEY ("RegisteredByUserId") REFERENCES "Users" ("Id") ON DELETE SET NULL
    );
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_AlertDeliveries_UserId" ON "AlertDeliveries" ("UserId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE UNIQUE INDEX "IX_AlertPreferences_UserId_AlertType" ON "AlertPreferences" ("UserId", "AlertType");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_BomItems_MaterialId" ON "BomItems" ("MaterialId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_Fichas_InstructorUserId" ON "Fichas" ("InstructorUserId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_Fichas_ProductionOrderId" ON "Fichas" ("ProductionOrderId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE UNIQUE INDEX "IX_FunctionalRequirements_Code" ON "FunctionalRequirements" ("Code");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_MaterialRequests_MaterialId" ON "MaterialRequests" ("MaterialId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_MaterialRequests_ProductionOrderId" ON "MaterialRequests" ("ProductionOrderId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE UNIQUE INDEX "IX_NonFunctionalRequirements_Code" ON "NonFunctionalRequirements" ("Code");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_PasswordResetTokens_TokenHash" ON "PasswordResetTokens" ("TokenHash");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_PasswordResetTokens_UserId_CreatedAtUtc" ON "PasswordResetTokens" ("UserId", "CreatedAtUtc");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE UNIQUE INDEX "IX_ProductionOrders_OrderNumber" ON "ProductionOrders" ("OrderNumber");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_ProductionSessions_FichaId" ON "ProductionSessions" ("FichaId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_ProductionSessions_ProductionOrderId" ON "ProductionSessions" ("ProductionOrderId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_ProductionSessions_RegisteredByUserId" ON "ProductionSessions" ("RegisteredByUserId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_QualityRecords_ProductionOrderId" ON "QualityRecords" ("ProductionOrderId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE UNIQUE INDEX "IX_Users_Email" ON "Users" ("Email");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    CREATE INDEX "IX_Users_FichaAsignadaId" ON "Users" ("FichaAsignadaId");
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    ALTER TABLE "AlertDeliveries" ADD CONSTRAINT "FK_AlertDeliveries_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE;
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    ALTER TABLE "AlertPreferences" ADD CONSTRAINT "FK_AlertPreferences_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE;
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    ALTER TABLE "Fichas" ADD CONSTRAINT "FK_Fichas_Users_InstructorUserId" FOREIGN KEY ("InstructorUserId") REFERENCES "Users" ("Id") ON DELETE SET NULL;
    END IF;
END $EF$;

DO $EF$
BEGIN
    IF NOT EXISTS(SELECT 1 FROM "__EFMigrationsHistory" WHERE "MigrationId" = '20260730145651_InitialPostgreSQL') THEN
    INSERT INTO "__EFMigrationsHistory" ("MigrationId", "ProductVersion")
    VALUES ('20260730145651_InitialPostgreSQL', '10.0.9');
    END IF;
END $EF$;
COMMIT;

